| Bug #7037 | Test "mysql_protocols" fails on Solaris 8 + 9 /x86 | ||
|---|---|---|---|
| Submitted: | 6 Dec 2004 13:27 | Modified: | 14 Oct 2005 21:22 |
| Reporter: | Lenz Grimmer | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1.8-pre - 5.0.4 | OS: | Sun Solaris (Solaris 8 + 9 / x86) |
| Assigned to: | Magnus Blaudd | Target Version: | |
[6 Dec 2004 13:27]
Lenz Grimmer
[6 Dec 2004 15:00]
Guilhem Bichot
So the 'mysql' command-line client prints this debug info even if nobody asked it too.
Adding a printf("%d\n",(int)stderr); to mysys/my_init.c:
void my_end(int infoflag)
{
FILE *info_file;
if (!(info_file=DBUG_FILE))
info_file=stderr;
printf("%d\n",(int)stderr);
DBUG_PRINT("info",("Shutting down"));
and rebuilding libmysql/ and client/ makes the debug info go away.
So, apparently a bad compiler bug (a printf() like above should probably not cause the
subsequent test (later in my_end()) to change result:
if (infoflag & MY_GIVE_INFO || info_file != stderr)
I'm attaching a my_init.tar which contains (my_init.o) the generated assembler without
the printf() and (my_init.o.new) with the added printf().
[7 Dec 2004 1:35]
Kent Boortz
I suggest trying with "-fast -fsimple=1 -xinline=no%qf_disc" See http://pari.math.u-bordeaux.fr/cgi-bin/bugreport.cgi?bug=110 We configure this target a bit funny, with CC=gcc CXX=gcc ./configure ..... but no gcc is found for reasons unknown, gcc *is* in the PATH used. So the question is, did we intend to use Sun C?
[7 Dec 2004 12:09]
Lenz Grimmer
No, we actually use the Sun Studio compiler here. No gcc is involved.
[3 Feb 2005 9:19]
Lenz Grimmer
Seems a compiler upgrade resolved this phenomenon - it's not reproducable with the current 4.1.10 build anymore. Please disregard.
[3 Feb 2005 11:48]
Konstantin Osipov
I'm closing the bug, please reopen it in case the error pops up again.
[24 Feb 2005 17:59]
Joerg Bruehe
Bug re-occurred, now in 5.0.3. Re-using this entry, same symptom etc. Debug tree saved as tar.gz on the machine using the old name.
[15 Apr 2005 18:31]
Joerg Bruehe
Same bug now in 5.0.4 on 'intelxeon3' (Solaris 8 / x86), this is the first build there.
[23 Sep 2005 7:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30248
[23 Sep 2005 12:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30264
[14 Oct 2005 21:22]
Konstantin Osipov
The patch above has been reviewed and pushed into the main tree.
